background style change

--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -8,7 +8,7 @@
 
 body {
   user-select: none;
-  background-color: #f7f5f1; // #f7f5f1
+  background-color: #f7f2e9f3; // #f7f5f1
   font-family: 'Roboto', sans-serif;
 }
 
