--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -61,7 +61,7 @@ h1, h2, h3, h4, h5 {
   display: inline-block;
 }
 
-.probSelect {
+.probSelect, .trigSelect {
   width: 18px;
   margin: 1px;
   border: 1px black;
